@@ -789,11 +789,11 @@ public class Test {
 
     <rule  name="UselessOperationOnImmutable"
            since="3.5"
-           message="An operation on an Immutable object (BigDecimal or BigInteger) won't change the object itself"
+           message="An operation on an Immutable object (String, BigDecimal or BigInteger) won't change the object itself"
            class="net.sourceforge.pmd.rules.UselessOperationOnImmutable"
            externalInfoUrl="http://pmd.sourceforge.net/rules/basic.html#UselessOperationOnImmutable">
       <description>
-    An operation on an Immutable object (BigDecimal or BigInteger) won't change the object itself. The
+    An operation on an Immutable object (String, BigDecimal or BigInteger) won't change the object itself. The
     result of the operation is a new object. Therefore, ignoring the operation result is an error.
       </description>
       <priority>3</priority>
